syntax="proto3";

option go_package="./pb";

package proto;

message Petition {
    uint32 id = 1;
    string title = 2;
    string category = 3;
    string description = 4;
    string image = 5;
    Status status = 6;
    uint32 user_id = 7;
    uint32 vote_goal = 8;
}

message PetitionGetUser{
    uint32 id = 1;
    string title = 2;
    string category = 3;
    string description = 4;
    Status status = 6;
}

message PetitionGetUserVoted{
    uint32 id = 1;
    string title = 2;
    string category = 3;
    string description = 4;
}
message Status {
    uint32 id = 1;
    string title = 2;
}

message CreateVoteRequest{
    uint32 user_id = 1;
    uint32 petition_id = 2;
}

message CreatePetitionRequest {
    string title = 1;
    string description = 2;
    string image = 3;
    uint32 user_id = 4;
    string category = 5;
    uint32 vote_goal = 8;
}

message PetitionId {
    uint32 id = 1;
}

message GetPetitionsRequest {
    uint32 page = 1;
    uint32 limit = 2;
}

message GetPetitionsResponse {
    repeated Petition petitions = 1;
}

message UpdatePetitionStatusRequest{
    uint32 id = 1;
    string status = 2;
}

message GetUserPetitionsRequest {
    uint32 user_id = 1;
    uint32 page = 2;
    uint32 limit = 3;
}

message GetUserPetitionsResponse {
    repeated PetitionGetUser petitions = 1;
}


message GetUserVotedPetitionsRequest {
    uint32 user_id = 1;
    uint32 page = 2;
    uint32 limit = 3;
}

message GetUserVotedPetitionsResponse {
    repeated PetitionGetUserVoted petitions = 1;
}